--- a/app/templates/components/nav-bar.hbs
+++ b/app/templates/components/nav-bar.hbs
@@ -16,13 +16,13 @@
             {{/link-to}}
         </ul>
         <ul class="nav navbar-nav">
-            {{#if session.isAuthenticated}}
-                <li class="nav-item"><a class="nav-link" href {{action 'logout'}}>Logout</a></li>
-            {{else}}
+            {{!-- {{#if session.isAuthenticated}} --}}
+                {{!-- <li class="nav-item"><a class="nav-link" href {{action 'logout'}}>Logout</a></li> --}}
+            {{!-- {{else}} --}}
                 {{#link-to "login" tagName='li' class="nav-item"}}
                     <a href class="nav-link">Login</a>
                 {{/link-to}}
-            {{/if}}
+            {{!-- {{/if}} --}}
         </ul>
     </div>
 </nav>
